tests/fixtures/syntax_rules/pos/r001-syntax-error.ts
// Positive fixture: syntax error — triggers TS-SYN-R001
export function broken( { }
