tests/fixtures/syntax_rules/neg/r001-valid-syntax.ts
/** Module documentation for clean negative fixture. */

/** Valid syntax — does NOT trigger TS-SYN-R001. */
export function valid(): string {
  return "ok";
}
